src/objects/Evidence__c.object
<CustomObject>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>evidenceOfActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>evidenceOfActivity</label>
        <referenceTo>Mesure__c</referenceTo>
        <relationshipLabel>Evidences</relationshipLabel>
        <relationshipName>Evidences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webRessource__c</fullName>
        <label>webRessource</label>
        <type>Url</type>
    </fields>
    <label>Evidence</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evidences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>